all section mobile devise bug fix added

--- a/responsive/responsive.css
+++ b/responsive/responsive.css
@@ -15,8 +15,14 @@
         border-radius: 100rem;
         border: 3px solid #272727;
     }
+    .deals-container{
+        width: 100%;
+    }
     .form{
         text-align: left;
+    }
+    .bmi-description, .table-heading, .form-heading,.form-description,.form-inputs,.activity-select{
+        width: 50%;
     }
     .run-section{
         flex-direction: column;
